# snarkOS

./: .gitignore  Cargo.toml  Makefile
cli/src/commands/: start.rs
cli/src/helpers/: logger.rs
dockerfiles/aleo-proof/: Dockerfile  Makefile
node/: Cargo.toml
node/bft/: Cargo.toml
node/bft/src/: gateway.rs  primary.rs  worker.rs
node/bft/src/sync/: mod.rs
node/consensus/: Cargo.toml
node/consensus/src/: lib.rs
node/malice/: Cargo.toml
node/malice/src/: lib.rs  macros.rs  mode.rs
node/router/: Cargo.toml
node/router/src/: inbound.rs  lib.rs
node/src/client/: router.rs
node/src/prover/: mod.rs  parse.rs
