[package]
name = "snarkos-node-malice"
version = "2.2.7"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Utilities for malicious machinations."
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
